<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expenses.ExpensesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_expenses"
        android:gravity="center"
        android:textSize="30sp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expenses_last_expense"
        android:layout_marginTop="50dp"
        android:textSize="23sp"
        android:textFontWeight="700">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expenses_previous_expenses"
        android:layout_marginTop="150dp"
        android:textSize="23sp"
        android:textFontWeight="700">
    </TextView>



</RelativeLayout>