<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/margin_general"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_posts"
        android:id="@+id/btn_home_posts">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Perfil"
        android:id="@+id/btn_home_profile">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_reservations"
        android:id="@+id/btn_home_reservations">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_expenses"
        android:id="@+id/btn_home_expenses">
    </Button>
</LinearLayout>
