<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".posts.ui.PostDetailFragment"
    style="@style/ParentScrollViewLayout">

    <ScrollView
        style="@style/ScrollViewLayout"
        android:layout_above="@+id/vLayoutButtonsPostItem">

        <LinearLayout style="@style/PrimaryLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vLayoutSummaryPostItem"
                style="@style/TextRequiredInputLayout"
                android:hint="@string/post_required_summary"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vInputSummaryPostItem"
                    style="@style/TextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vLayoutDescriptionPostItem"
                style="@style/TextRequiredInputLayout"
                android:hint="@string/post_required_description"
                app:counterEnabled="true"
                app:counterMaxLength="1000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vInputDescriptionPostItem"
                style="@style/TextInputEditText"
                android:lines="8"
                android:gravity="start"/>

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vButtonAddImagePostItem"
                style="@style/TextButton"
                app:icon="@drawable/ic_attach"
                android:text="@string/post_add_image"/>

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/vSliderImagePostItem"
                style="@style/SliderImageView"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/vLayoutButtonsPostItem"
        style="@style/PrimaryButtonsLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vButtonSavePostItem"
            style="@style/PrimaryButton"
            android:text="@string/button_save"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vButtonCancelPostItem"
            style="@style/SecondaryButton"
            android:text="@string/button_cancel"/>
    </LinearLayout>
</RelativeLayout>