<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservations.ReservationsCreationFragment"
    android:layout_margin="@dimen/margin_general">

    <TextView
        android:id="@+id/vReservationsFormTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryText"
        android:text="@string/res_form_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/vReservationsSelect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/res_form_1_hint"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsFormTitle1" />

    <TextView
        android:id="@+id/vReservationsFormTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/res_form_2"
        style="@style/PrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsSelect" />

    <ImageView
        android:id="@+id/vReservationsForm2Bton"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:background="@android:color/white"
        android:src="@drawable/calendar"
        app:layout_constraintStart_toEndOf="@+id/vReservationsFormTitle2"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsSelect" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/vReservationsDay"
        style="@style/TextInputEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/res_form_2_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsFormTitle2"/>

    <TextView
        android:id="@+id/vReservationsFormTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/PrimaryText"
        android:text="@string/res_form_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsDay" />

    <ImageView
        android:id="@+id/vReservationsForm3Bton"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:background="@android:color/white"
        android:src="@drawable/clock"
        app:layout_constraintStart_toEndOf="@+id/vReservationsFormTitle3"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsDay" />


    <Spinner
        android:id="@+id/vReservationsHour"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/res_form_1_hint"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vReservationsFormTitle3" />

    <LinearLayout
        android:id="@+id/vLayoutButtonsPostItem"
        style="@style/PrimaryButtonsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vReservationsFormCreateBtn"
            style="@style/PrimaryButton"
            android:text="@string/btn_create_reservation"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vReservationsFormCancelBtn"
            style="@style/SecondaryButton"
            android:text="@string/button_cancel"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>