<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/vProgressBarLayout"
        layout="@layout/layout_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/loginFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_general">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/vLoginLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/konzern"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vLayoutLoginEmail"
                style="@style/TextInputLayout"
                android:hint="@string/login_email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vLoginEmailInput"
                    android:inputType="textEmailAddress"
                    style="@style/TextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vLayoutLoginPassword"
                style="@style/TextInputLayout"
                app:endIconMode="password_toggle"
                android:hint="@string/login_password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vLoginPassword"
                    android:inputType="textPassword"
                    style="@style/TextInputEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vLoginButton"
                style="@style/PrimaryButton"
                android:text="@string/login_sign_in_button_text"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vLoginSignUpButton"
                style="@style/PrimaryButton"
                android:text="@string/login_sign_up_button_text" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/vLoginGoogleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>