<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:id="@+id/vFragmentSignUp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vCompleteSignUpLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/konzern"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vCompleteSignUpPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_phone_hint"
            app:layout_constraintTop_toBottomOf="@id/vCompleteSignUpLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vCompleteSignUpBuildingCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_building_code_hint"
            app:layout_constraintTop_toBottomOf="@id/vCompleteSignUpPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vCompleteSignUpInfo"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_info_hint"
            app:layout_constraintTop_toBottomOf="@id/vCompleteSignUpBuildingCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="80dp"
            android:lines="8" />

        <Button
            android:id="@+id/vCompleteSingUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vCompleteSignUpInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>